        (see http://wiki.lustre.org/index.php?title=Patchless_Client)
        2.6.16 - 2.6.21 vanilla (kernel.org)
       * Recommended e2fsprogs version: 1.40.4-cfs1
       * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
       * RHEL 4 and RHEL 5/SLES 10 clients behaves differently on 'cd' to a
        removed cwd "./" (refer to Bugzilla 14399).

Severity   : normal
Bugzilla   : 14607
Description: NULL lov_tgts causing MDS oops
Details    : more safe checks for NULL lov_tgts for avoid oops.

Severity   : enhancement
Bugzilla   : 14531
Description: Update to RHEL4 latest kernel-2.6.9-67.0.1.EL.

Severity   : enhancement
Bugzilla   : 14482
Description: Add rhel5 support to HEAD.

Severity   : normal
Bugzilla   : 13375
Descriptoin: make lov_create() will not stuck in obd_statfs_rqset()
Details    : If an OST is down the MDS will hang indefinitely in
             obd_statfs_rqset() waiting for the statfs data. While for
	     MDS QOS usage of statfs, it should not stuck in waiting.

Severity   : enhancement
Bugzilla   : 14288
Description: Update to RHEL4 U6 kernel-2.6.9-67.EL.

Severity   : enhancement
Bugzilla   : 14368
Description: Update to RHEL5 latest kernel-2.6.18-53.1.4.el5.

Severity   : normal
Bugzilla   : 14136
Description: make mgs_setparam() handle fsname containing dash
Details    : fsname containing a dash does not work with lctl conf_param

Severity   : enhancement
Bugzilla   : 14388
Description: Update to SLES10 SP1 latest kernel-2.6.16.54-0.2.3.

Severity   : enhancement
Bugzilla   : 14289
Description: Update to RHEL5 Update-1 kernel 2.6.18-53.el5.

Severity   : major
Bugzilla   : 14260
Frequency  : rare, at shutdown
Description: access already free / zero obd_namespace.
Details    : if client_disconnect_export was called without force flag set,
	     and exist connect request in flight, this can produce access to
	     NULL pointer (or already free pointer) when connect_interpret 
	     store ocd flags in obd_namespace.
