@@ -13,6 +13,12 @@ tbd  Sun Microsystems, Inc.
         removed cwd "./" (refer to Bugzilla 14399).
 
 Severity   : normal
+Bugzilla   : 9977
+Description: allow userland application know is lost one of stripes.
+Details    : fill lvb_blocks with error code on ost and return it to
+             application if error flag found.
+
+Severity   : normal
 Bugzilla   : 14607
 Description: NULL lov_tgts causing MDS oops
 Details    : more safe checks for NULL lov_tgts for avoid oops.
